Sep 24 2002  2.5.2  Tweaked network storing to not track ssids for probe, etc
                     networks.
                    Rolled cougar's patch for gpsmap tracks into gpsmap
Sep 23 2002  2.5.2  Tweaked hopper to go to channel 11 in the US ranges
                    Added netxml dtd 1.5 for new ip range handling
                    Fixed lucent router clients being classified as unknown.
                    Fixed ACPI tests in configure
                    Fixed segfault when the frontend is scaled too small to
                     display any networks.
                    Applied same segfault fix to client list.
                    Resize fixes to panels frontend
Sep 22 2002  2.5.2  Minor bugfixes and changes to the panels ui
                    Fixed installation of man files, added kismet_hopper man
Sep 21 2002  2.5.2  Tweaked manuf matching code to not find cloaked/wep'd 
                     networks as defaults.
                    Updated makefile and spec file for manuf tag files
                    More documentation updates
                    Added default catch to gpsmap arguments
Sep 20 2002  2.5.2  Revamped host fingerprinting to use the database from
                     unbolted.net
                    Updated gpsmap to bail when no drawing methods are
                     requested.
                    Fixed spanning tree protocol being identified as LOR.
                    Updated man files
Sep 17 2002  2.5.2  Merged/Modified patch from Andrew Etter for customized
                     festival speech.
                    Updated docs
                    Removed curses and panels linkage from kismet_server
                    Trimmed comment-out code cruft
                    Merged/Modified patch from Cougar for kismet_curses to
                     reconnect to a server.
                    Fixed numerics in speech patches
Sep 16 2002  2.5.2  Fixed client handling and aging in groups
                    Fixed group map saving/loading